Fixed asserts and added new structures
