# static/swagger.json
@@ -18,6 +18,108 @@
       "http"
    ],
    "paths": {
+      "/file-upload": {
+         "post": {
+            "responses": {
+               "200": {
+                  "description": "Return with sucess",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "data": {
+                                 "type": "object",
+                                 "properties": {
+                                    "success": {
+                                       "type": "boolean"
+                                    },
+                                    "message": {
+                                       "type": "string"
+                                    }
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               },
+               "400": {
+                  "description": "Bad request.",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "data": {
+                                 "type": "object",
+                                 "properties": {
+                                    "success": {
+                                       "type": "boolean"
+                                    },
+                                    "message": {
+                                       "type": "string"
+                                    }
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "/parameters/{id}": {
+         "summary": "To send parameters in URL.",
+         "get": {
+            "responses": {
+               "200": {
+                  "description": "Return with sucess",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "data": {
+                                 "type": "object",
+                                 "properties": {
+                                    "type": {
+                                       "type": "string"
+                                    }
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               },
+               "400": {
+                  "description": "Bad request.",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "data": {
+                                 "type": "object",
+                                 "properties": {
+                                    "success": {
+                                       "type": "boolean"
+                                    },
+                                    "message": {
+                                       "type": "string"
+                                    }
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               }
+            }
+         }
+      },
       "/transfer": {
          "summary": "To send transfers",
          "post": {
